fix text overlapping on Profile section

--- a/src/style/mediaqueries.css
+++ b/src/style/mediaqueries.css
@@ -112,10 +112,19 @@
   /*  padding-bottom: 0;*/
   /*}*/
 
+  /*#profile {*/
+  /*  height: auto;*/
+  /*  margin-bottom: 2rem;*/
+  /*  padding: 2rem 1rem;*/
+  /*}*/
+
   #profile {
     height: auto;
     margin-bottom: 2rem;
     padding: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   article {
@@ -161,6 +170,7 @@
     height: 46vw;
     justify-content: center;
     margin: 0 auto 1rem;
+    max-width: 300px; /* Adjust as needed */
   }
 
   .section__text__p2 {
@@ -177,20 +187,13 @@
     text-align: justify;
   }
 
-  #profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: auto;
-    margin-bottom: 0;
-  }
-
-  .section__pic-container {
-    width: 100%;
-    height: auto;
-    margin: 0 auto 2rem;
-    max-width: 300px; /* Adjust as needed */
-  }
+  /*#profile {*/
+  /*  display: flex;*/
+  /*  flex-direction: column;*/
+  /*  align-items: center;*/
+  /*  height: auto;*/
+  /*  margin-bottom: 0;*/
+  /*}*/
 
   .frame {
     width: 100%;
